--- a/Home.html
+++ b/Home.html
@@ -258,7 +258,7 @@
     <main>
         <div class="parallax-container">
             <div class="parallax">
-                <a href="Untitled-1.html" class="friday">
+                <a href="signin.html" class="friday">
                     <p class="textfriday">Black Friday</p>
                     <p class="textfriday">SAVE UP TO 60%</p>
                     <img src="Nike-Logo-PNG-Clipart.png" class="logo-f">
