--- a/signin.html
+++ b/signin.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="boxR">
-        <p><input placeholder="gmail" class="gmail"></p>
-        <p><input placeholder="password" class="password"></p>
-        <p><button class="">sign in</button></p>
+        <p><input placeholder="gmail" class="gmail" id="gmail"></p>
+        <p><input placeholder="password" class="password" id="pass"></p>
+
+        <p><button id="sign" class="">sign in</button></p>
         <span class="">
             <p>Don't have a account?Register</p>
         </span>
