--- a/signin.html
+++ b/signin.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Untitled-1.css">
+    <link rel="stylesheet" href="styles for logreg.css">
     <title>123</title>
     <script src="signin.js"></script>
 </head>
 <body>
-    <div class="boxR">
-
-        <p><input type="mail" placeholder="gmail" class="gmail" id="check_mail"></p>
-        <p><input type="password" placeholder="password" class="password" id="check_pass"></p>
-
+    <img src=>
+    <div class="center">
+    <div class="" id="cont">
+        <img src="Logo_NIKE.svg.png" class="logo">
+        <div>
+            <p><input type="email" placeholder="gmail" class="gmail" id="check_mail"></p>
+            <p><input type="password" placeholder="password" class="password" id="check_pass"></p>
+        </div>
         <p><button class="" id="signin">Sign in</button></p>
+        <span class="">
+            <p class="TextBot">Don't have an account?</p>
+            <a href="sign up.html" class="TextBotR">Sign Up</a>
+        </span>
+    </div>
+    </div>
 
         <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js';
@@ -72,12 +81,10 @@
         
 
 
-        </script>
-    
 
-        <span class="">
-            <p>Don't have a account? <a href="sign up.html">Register</a></p>
-        </span>
-    </div>
+
+
+
+        </script>
 </body>
 </html>
