--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,8 @@
     <title>123</title>
 </head>
 <body>
+
+
     <header>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +17,8 @@
         <a href=""><img src="Logo_NIKE.svg.png" class="logo"></a>
         <div class="verh" id="verh">
             <!-- <img src="Nike-Logo.png" class="logo"> -->
+
+
 
             <a href="" class="verh-a">Home</a>
             <a href="" class="verh-a">All products</a>
@@ -51,7 +55,7 @@
         <div class="newfr">
             <button id="prevPage" class="buttonpage"><p class="fzb"><b><</b></p><p class="nxpr">Prev. page<p></button>
                 <span class="sdfr page-1">
-                    <a href=""><img src="df385bfb-dd55-40d9-b546-34529fed1b27.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/pidf385bfb-dd55-40d9-b546-34529fed1b27.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Air Max Pre-Day LX</p></a>
                     <a class="mwk">Men's shoes</a>
                     <span class="sdfsmall">
@@ -62,7 +66,7 @@
 
                 </span>
                 <span class="sdfr page-1">
-                    <a href=""><img src="airmax.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/airmax.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Air Max 90</p></a>
                     <a class="mwk">Men's shoes</a>
                     <span class="sdfsmall">
@@ -72,7 +76,7 @@
                     </span>
                 </span>
                 <span class="sdfr page-1">
-                    <a href=""><img src="95c7305b-4daa-44f1-93a1-879ca3f1d21b.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/95c7305b-4daa-44f1-93a1-879ca3f1d21b.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Air Terraspace Plus</p></a>
                     <a class="mwk">Men's shoes</a>
                     <span class="sdfsmall">
@@ -82,7 +86,7 @@
                     </span>
                 </span>
                 <span class="sdfr page-2">
-                <a href=""><a href=""><img src="43d1fabb-b103-4dc0-9ff0-a555e79e3f46.webp" class="arrivals"></a>
+                <a href=""><a href=""><img src="./pictures/43d1fabb-b103-4dc0-9ff0-a555e79e3f46.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Air Max 270</p></a>
                     <a class="mwk">Women's shoes</a>
                     <span class="sdfsmall">
@@ -92,7 +96,7 @@
                 </span>
             </span>
                 <span class="sdfr page-2">
-                    <a href=""><img src="vapormaxfly.jpg" class="arrivals"></a>
+                    <a href=""><img src="././pictures/pictures/vapormaxfly.jpg" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Air VaporMax 2023 Flyknit</p></a>
                     <a class="mwk">Men's shoes</a>
                     <span class="sdfsmall">
@@ -102,7 +106,7 @@
                 </span> 
                 </span>
                 <span class="sdfr page-2">
-                    <a href=""><img src="97.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/97.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Dunk Low Retro</p></a>
                     <a class="mwk">Men's shoes</a>
                     <span class="sdfsmall">
@@ -112,37 +116,37 @@
                 </span> 
                 </span>
                 <span class="sdfr page-3">
-                    <a href=""><img src="77 low.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/77-low.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Dunk Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
                 </span>
                 <span class="sdfr page-3">
-                    <a href=""><img src="77 mid.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/77-mid.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Ni12ke Dunk Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
                 </span>
                 <span class="sdfr page-3">
-                    <a href=""><img src="sportswe.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/sportswe.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Dunk Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
                 </span>
                 <span class="sdfr page-4">
-                    <a href=""><img src="therma.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/therma.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Dunk Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
                 </span>
                 <span class="sdfr page-4">
-                    <a href=""><img src="jor1zoomgre.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/jor1zoomgre.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">Nike Dunk Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
                 </span>
                 <span class="sdfr page-4">
-                    <a href=""><img src="i1-65f23b19-1ac3-4fe7-8cce-c2a58b3e8921.webp" class="arrivals"></a>
+                    <a href=""><img src="./pictures/i1-65f23b19-1ac3-4fe7-8cce-c2a58b3e8921.webp" class="arrivals"></a>
                     <a href=""><p class="NikeDunkLowPremiumfr">N12k Low Retro</p></a>
                     <a href=""><p class="new-c">New!</p></a>
                     <a href=""><p class="new-bfr">115$</p></a>
@@ -187,25 +191,25 @@
         <a href=""><u><b><p class="new-3">See more</p></b></u></a>
         <div class="new">
             <span class="sdf">
-                <a href=""><a href=""><img src="premium.webp" class="arrivals"></a>
+                <a href=""><a href=""><img src="./pictures/premium.webp" class="arrivals"></a>
                 <a href=""><p class="NikeDunkLowPremium">Nike Dunk Low Premium</p></a>
                 <a href=""><p class="new-c">New!</p></a>
                 <a href=""><p class="new-b">125$</p></a>
             </span>
             <span class="sdf">
-                <a href=""><img src="air max.webp" class="arrivals"></a>
+                <a href=""><img src="./pictures/air max.webp" class="arrivals"></a>
                 <a href=""><p class="NikeDunkLowPremium">Nike Air Max Plus</p></a>
                 <a href=""><p class="new-c">New!</p></a>
                 <a href=""><p class="new-b">185$</p></a>
             </span>
             <span class="sdf">
-                <a href=""><img src="vapormax.webp" class="arrivals"></a>
+                <a href=""><img src="./pictures/vapormax.webp" class="arrivals"></a>
                 <a href="" id="vapormax"><p class="NikeDunkLowPremium" >Nike Air VaporMax Plus</p></a>
                 <a href="" ><p class="new-c">New!</p></a>
                 <a href=""><p class="new-b">210$</p></a>
             </span>
             <span class="sdf">
-                <a href=""><img src="retro.webp" class="arrivals"></a>
+                <a href=""><img src="./pictures/retro.webp" class="arrivals"></a>
                 <a href=""><p class="NikeDunkLowPremium">Nike Dunk Low Retro</p></a>
                 <a href=""><p class="new-c">New!</p></a>
                 <a href=""><p class="new-b">115$</p></a>
@@ -213,6 +217,17 @@
         </div>
             <p><!--Didn't find the product?--></p>
         </div>
+
+        
+<button id="chatWindow">
+    <iframe
+    id="frame"
+    id="inlineFrameExample"
+    title="Inline Frame Example"
+    src="https://www.google.com/">
+  </iframe>
+</button>
+
         
     </main>
     <footer>
