--- a/Home.html
+++ b/Home.html
@@ -222,9 +222,8 @@
 <button id="chatWindow">
     <iframe
     id="frame"
-    id="inlineFrameExample"
     title="Inline Frame Example"
-    src="https://www.google.com/">
+    src="https://react-chat-timonwa.vercel.app/">
   </iframe>
 </button>
 
