--- a/Home.html
+++ b/Home.html
@@ -219,15 +219,16 @@
         </div>
 
         
-<button id="chatWindow">
-    <iframe
-    id="frame"
-    title="Inline Frame Example"
-    src="https://react-chat-timonwa.vercel.app/">
-  </iframe>
-</button>
+<button id="chatWindow"></button>
+<button id="chatWindowHide"></button>
 
-        
+<iframe
+id="frame"
+title="Inline Frame Example"
+src="https://react-chat-timonwa.vercel.app/">
+</iframe>
+
+
     </main>
     <footer>
         <div id = "ebook">
